--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       <input type="animation-name" id="animation-name" name="animation-name" value="" onkeyup="setAnimationName(this.value)" /><br>
       <label for="element-color">Font Color</label><br>
       <input type="element-color" id="element-color" name="element-color" value="" onkeyup="setElementColor(this.value)" /><br>
+      <label for="element-type">Element Type</label><br>
+      <input type="element-text" id="element-type" name="element-type" value="" onkeyup="setElementType(this.value)" /><br>
+      <label for="element-text">Element Text</label><br>
+      <input type="element-text" id="element-text" name="element-text" value="" onkeyup="setElementText(this.value)" /><br>
+      <label for="font-size">Font Size</label><br>
+      <input type="font-size" id="font-size" name="font-size" value="" onkeyup="setFontSize(this.value)" /><br>
       <input type="reset"/>
     </form>
     <button onclick="createNewElement()">Create New Element</button>
